# codegpt-swe-bench

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: db_user_info.csv
data/results/: CodeGPT_MultiAgent_Llama4_Maverick.jsonl  CodeGPT_MultiAgent_Opus4.jsonl
data/results/CodeGPT_MultiAgent_Llama4_Maverick/diffs/: django__django-12125.diff  django__django-15781.diff  matplotlib__matplotlib-26011.diff  psf__requests-3362.diff  pytest-dev__pytest-5227.diff  scikit-learn__scikit-learn-13497.diff  sphinx-doc__sphinx-8595.diff  sympy__sympy-13031.diff  sympy__sympy-13773.diff  sympy__sympy-16106.diff  sympy__sympy-21614.diff  sympy__sympy-23262.diff
data/results/CodeGPT_MultiAgent_Llama4_Maverick/errors/: django__django-11049.error  django__django-15498.error  sympy__sympy-19007.error  sympy__sympy-21847.error
data/results/CodeGPT_MultiAgent_Llama4_Maverick/patches/: django__django-12125_patches.json  django__django-12589_patches.json  django__django-12856_patches.json  django__django-14382_patches.json  django__django-14997_patches.json  django__django-15498_patches.json  django__django-15781_patches.json  django__django-17087_patches.json  matplotlib__matplotlib-23987_patches.json  matplotlib__matplotlib-26011_patches.json  psf__requests-3362_patches.json  (+16 more)
data/results/swe-bench/: CodeGPT_MultiAgent_Llama4_Maverick.0.json  CodeGPT_MultiAgent_Opus4.json
notebooks/: 00_create_graphs.ipynb  01_test_prompt.ipynb  02_get_patches.ipynb  03_summarise_results.ipynb  CodeGPT_Patcher.py  utils.py
prompts/: agents.ts  tools_description.ts
(+110 files in other folders)
