[project]
name = "codegpt-swe-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.12.3",
    "datasets==3.2.0",
    "gitpython==3.1.37",
    "ipykernel>=6.30.0",
    "pandas==2.3.1",
    "psycopg==3.2.4",
    "python-dotenv==1.0.1",
    "python-levenshtein==0.27.1",
    "streamlit==1.42.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
